--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -1,9 +1,9 @@
 name: Waka Readme
 
 on:
+  workflow_dispatch:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: '0 13 * * *'
 
 jobs:
   update-readme:
